# golfie

./: .gitignore  DESIGN.md  PRODUCT.md  README.md
.impeccable/: design.json
.impeccable/live/: config.json
apps/web/backend/: pyproject.toml
apps/web/backend/golfie_api/: __init__.py  config.py  main.py  pipeline.py
apps/web/backend/golfie_api/routers/: __init__.py  calibration.py  sessions.py
apps/web/backend/golfie_api/storage/: __init__.py  session_store.py
apps/web/frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml
apps/web/frontend/src/: App.tsx  index.css
apps/web/frontend/src/components/: Header.css  Header.tsx  MetricCard.css  MetricCard.tsx  ShotSimulatorView.css  ShotSimulatorView.tsx  SourceBadge.css  SourceBadge.tsx  WarningsList.css  WarningsList.tsx
apps/web/frontend/src/lib/: api.ts  types.ts  units.ts
apps/web/frontend/src/pages/: CalibratePage.tsx  DemoPage.tsx  ProcessingPage.tsx  ReviewPage.tsx  SimulatorPage.tsx  UploadPage.tsx
apps/web/frontend/src/scenes/: AnimatedBall.tsx  DrivingRangeScene.css  DrivingRangeScene.tsx  RangeEnvironment.tsx  TrajectoryTracer.tsx  sceneMath.ts
data/sample_sessions/: sample_shot.json
docs/: coordinate_system.md
scripts/: calibrate_cameras.py  generate_sample_session.py  process_shot.py  setup_dev_env.sh
tests/: test_backend_api.py  test_calibration.py  test_coordinates.py  test_detection.py  test_fitting.py  test_physics.py  test_render_payload.py  test_schemas.py  test_sync.py  test_tracking.py  test_triangulation.py  test_validation.py  test_video.py
(+1 files in other folders)
